--- a/HackerNewAPI/app/build.gradle
+++ b/HackerNewAPI/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.yalantis:jellytoolbar:v1.0'
+
+    compile 'com.github.pwittchen:infinitescroll:0.0.1'
 }
